@@ -8,7 +8,7 @@ from __future__ import annotations
 from datetime import datetime
 import logging
 import threading
-from typing import Any, Final
+from typing import Any
 from xmlrpc.server import SimpleXMLRPCRequestHandler, SimpleXMLRPCServer
 
 import hahomematic.central_unit as hm_central
@@ -24,8 +24,6 @@ from hahomematic.const import (
 from hahomematic.decorators import callback_event, callback_system_event
 
 _LOGGER = logging.getLogger(__name__)
-
-_XML_RPC_SERVER: XmlRpcServer | None = None
 
 
 # pylint: disable=invalid-name
@@ -211,39 +209,47 @@ class XmlRpcServer(threading.Thread):
     XML-RPC server thread to handle messages from CCU / Homegear.
     """
 
+    _instances: dict[int, XmlRpcServer] = {}
+
     def __init__(
         self,
         local_port: int = PORT_ANY,
     ):
-        _LOGGER.debug("__init__")
-        threading.Thread.__init__(self)
+        """Init XmlRPC server."""
+        if len(self._simple_xml_rpc_server.funcs) == 0:
+            _LOGGER.debug("__init__: Register functions")
+            self._simple_xml_rpc_server.register_introspection_functions()
+            self._simple_xml_rpc_server.register_multicall_functions()
+        if self._simple_xml_rpc_server.instance is None:
+            _LOGGER.debug("__init__: Create thread")
+            threading.Thread.__init__(self)
+            _LOGGER.debug("__init__: Registering RPC instance")
+            self._simple_xml_rpc_server.register_instance(
+                RPCFunctions(self), allow_dotted_names=True
+            )
 
-        _rpc_functions: Final[RPCFunctions] = RPCFunctions(self)
-        _LOGGER.debug("__init__: Setting up server")
-        self._simple_xml_rpc_server = HaHomematicXMLRPCServer(
-            (IP_ANY_V4, local_port),
-            requestHandler=RequestHandler,
-            logRequests=False,
-            allow_none=True,
-        )
-
-        self.local_port: Final[int] = self._simple_xml_rpc_server.socket.getsockname()[
-            1
-        ]
-        self._simple_xml_rpc_server.register_introspection_functions()
-        self._simple_xml_rpc_server.register_multicall_functions()
-        _LOGGER.debug("__init__: Registering RPC functions")
-        self._simple_xml_rpc_server.register_instance(
-            _rpc_functions, allow_dotted_names=True
-        )
-        self._centrals: Final[dict[str, hm_central.CentralUnit]] = {}
+    def __new__(cls, local_port: int) -> XmlRpcServer:
+        """Create new XmlRPC server."""
+        if (xml_rpc := cls._instances.get(local_port)) is None:
+            _LOGGER.info("Creating XmlRpc server")
+            xml_rpc = super(XmlRpcServer, cls).__new__(cls)
+            cls._simple_xml_rpc_server = HaHomematicXMLRPCServer(
+                (IP_ANY_V4, local_port),
+                requestHandler=RequestHandler,
+                logRequests=False,
+                allow_none=True,
+            )
+            cls.local_port: int = cls._simple_xml_rpc_server.socket.getsockname()[1]
+            cls._centrals: dict[str, hm_central.CentralUnit] = {}
+            cls._instances[cls.local_port] = xml_rpc
+        return xml_rpc
 
     def run(self) -> None:
         """
         Run the XmlRPC-Server thread.
         """
         _LOGGER.info(
-            "run: Starting XmlRPC-Server at http://IP_ANY_V4:%i", self.local_port
+            "run: Starting XmlRPC-Server at http://%s:%i", IP_ANY_V4, self.local_port
         )
         self._simple_xml_rpc_server.serve_forever()
 
@@ -277,36 +283,25 @@ class XmlRpcServer(threading.Thread):
         """Return if no central is registered."""
         return len(self._centrals) == 0
 
-
-def get_xml_rpc_server() -> XmlRpcServer | None:
-    """Return the XmlRPC-Server."""
-    return _XML_RPC_SERVER
-
-
-def _set_xml_rpc_server(xml_rpc_server: XmlRpcServer | None) -> None:
-    """Add a XmlRPC-Server."""
-    # pylint: disable=global-statement
-    global _XML_RPC_SERVER
-    _XML_RPC_SERVER = xml_rpc_server
+    def instance(self) -> XmlRpcServer:
+        """Return the instance to a requested port"""
 
 
 def register_xml_rpc_server(local_port: int = PORT_ANY) -> XmlRpcServer:
     """Register the xml rpc server."""
-    if (xml_rpc := get_xml_rpc_server()) is None:
-        xml_rpc = XmlRpcServer(local_port)
+    xml_rpc = XmlRpcServer(local_port=local_port)
+    if not xml_rpc.is_alive():
         xml_rpc.start()
-        _LOGGER.info("register_xml_rpc_server: Registering XmlRPC-Server.")
-        _set_xml_rpc_server(xml_rpc)
+    _LOGGER.info("register_xml_rpc_server: Registering XmlRPC-Server.")
     return xml_rpc
 
 
-def un_register_xml_rpc_server() -> bool:
+def un_register_xml_rpc_server(local_port: int = PORT_ANY) -> bool:
     """Unregister the xml rpc server."""
-    xml_rpc = get_xml_rpc_server()
+    xml_rpc = XmlRpcServer(local_port=local_port)
     _LOGGER.info("stop: Trying to shut down XmlRPC-Server")
     if xml_rpc and xml_rpc.no_central_registered:
         xml_rpc.stop()
-        _set_xml_rpc_server(None)
         _LOGGER.info("stop: XmlRPC-Server stopped")
         return True
 
