@@ -1,5 +1,6 @@
 Version 2022.8.8 (2022-08-16)
 - Remove unused local_ip from XmlRPCServer
+- Create all XmlRpc server by requested port(s)
 
 Version 2022.8.7 (2022-08-12)
 - Fix hs_color for CeColorDimmer(HM-LC-RGBW-WM)
